# DirePhish

./: .env.example  .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  TODOS.md  docker-compose.prod.yml  docker-compose.yml  mirofish-architecture.html  package-lock.json  package.json  start-frontend-prod.sh  start.sh
backend/: pyproject.toml  requirements.txt  run.py  wsgi.py
backend/_deprecated/: graphiti_manager.py  oasis_profile_generator.py  simulation.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_paging.py
backend/adk/: __init__.py  agent_engine_deploy.py  models.py  orchestrator.py  runner.py  sse.py
backend/adk/a2a/: __init__.py  judge_agent_card.json  judge_client.py  judge_service.py
backend/adk/agents/: __init__.py  adaptive_arbiter.py  attacker_observation.py  pressure_engine.py  scheduled_injects.py
backend/adk/callbacks/: __init__.py  guardrails.py  otel_trace.py  track_cost.py
backend/adk/sinks/: __init__.py  actions_jsonl.py  firestore_sink.py  summary_json.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  adk_demo.py  adk_smoke.py  crucible.py  graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: __init__.py  adversarial_agent.py  comparative_report_agent.py  config_expander.py  config_generator.py  config_mutator.py  containment_judge.py  counterfactual_engine.py  crucible_manager.py  crucible_report_agent.py  embedding_client.py  exercise_report_agent.py  fair_loss_mapper.py  firestore_memory.py  graph_builder.py  graph_context.py  graphiti_manager.py  memory_types.py  monte_carlo_aggregator.py  monte_carlo_engine.py  monte_carlo_variations.py  oasis_profile_generator.py  ontology_generator.py  project_manager.py  report_agent.py  research_agent.py  risk_explainer.py  risk_score_engine.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  threat_analyzer.py  workflow_callback.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_manager.py  zep_tools.py
backend/app/utils/: console.py  cost_tracker.py  file_parser.py  llm_client.py  logger.py  rate_limiter.py  retry.py  zep_paging.py
backend/mcp_servers/: __init__.py  email_world.py  pagerduty_world.py  slack_world.py
backend/scripts/: action_logger.py  create_firestore_indexes.sh  eval_report.py  generate_after_action_report.py  probe_vertex_models.py  refine_prompts.py  run_crucible_simulation.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: conftest.py  test_api_endpoints.py  test_config_adversarial.py  test_config_expander.py  test_containment_judge.py  test_counterfactual_fields.py  test_counterfactual_resume.py  test_data_flywheel.py  test_evaluate_condition.py  test_extract_list.py  test_fair_loss_mapper.py  test_pipeline_harness.py  test_project_manager.py  test_report_kpi_fixes.py  test_risk_explainer.py  test_risk_score_api.py  test_risk_score_engine.py  test_sim_config_endpoint.py  test_simulation_runner_events.py
backend/tests/adk/: conftest.py  test_a2a_judge.py  (+21 more)
backend/uploads/: test_crucible_config.json
(+380 files in other folders)
