[project]
name = "direphish-backend"
version = "0.1.0"
description = "DirePhish — Swarm-predict what goes wrong next"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "raxIT Labs" }
]

dependencies = [
    # 核心框架
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    # LLM 相关
    "openai>=1.0.0",
    # Zep Cloud
    "zep-cloud==3.13.0",
    # Graphiti (local knowledge graph — replaces Zep Cloud)
    "graphiti-core==0.28.2",
    "kuzu>=0.11.0",
    # OASIS 社交媒体模拟
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    # 文件处理
    "PyMuPDF>=1.24.0",
    # 编码检测（支持非UTF-8编码的文本文件）
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "crucible-sim @ file:///Users/adeshgairola/Documents/raxIT/code/testing-folder/crucible",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
# graphiti-core requires neo4j>=5.26.0; override camel-oasis's strict neo4j==5.23.0 pin
override-dependencies = [
    "neo4j>=5.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
